# evo-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  notes.txt  pyproject.toml
.github/workflows/: docker-publish.yaml  on-pull-request.yaml  run-all-tests.yaml
docs/: README.md  authentication.md  estimation-workflow-design.md
docs/architecture/: interaction-pattern.md  object-lifecycle.md  session-layer.md  staging-layer.md
docs/skills/: evals.md  skills.md
docs/tools/: compute-tools.md  dev-tools.md
object-duplicates/: OBJECT_DUPLICATION_LOGIC.md  duplicate_analysis.py  duplicate_analysis_rendering.py  duplicates.ipynb  instance_workspace_selector.py  pyproject.toml
object-duplicates/tests/: test_duplicate_analysis.py
scripts/: check_python_license_headers.py  check_uv_lock_sources.py  setup-cursor.py  setup-vscode.py  setup_mcp.py
skills-dev/mcp-skill-eval/: SKILL.md
skills/block-model-management/: SKILL.md
skills/design-search-neighborhood/: SKILL.md
skills/evo-kriging-execute/: SKILL.md
skills/evo-kriging-run/: SKILL.md
skills/evo-object-discovery/: SKILL.md
skills/evo-object-management/: SKILL.md
skills/evo-object-visualisation/: SKILL.md
skills/evo-skill-eval/: SKILL.md
skills/kriging-orchestrator/: SKILL.md
skills/kriging-reporting/: SKILL.md
skills/kriging-workflow/: SKILL.md
skills/manage-block-model/: SKILL.md
skills/manage-point-set/: SKILL.md
skills/manage-search-neighborhood/: SKILL.md
skills/manage-variogram/: SKILL.md
src/: mcp_tools.py
templates/: cursor-mcp-config.json  vscode-mcp-config.json
tests/: README.md  conftest.py  helpers.py  test_duplicate_tools.py  test_logging_utils.py  test_object_compare_tools.py  test_session_isolation.py  test_tool_logging_integration.py  test_tool_strategy.py  test_uv_lock_sources.py
(+168 files in other folders)
