[project]
name = "evo-mcp"
version = "0.1.0"
description = "An MCP server implementation using Evo SDK"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp[code-mode]>=3.2.4",
    "google-adk==1.28.1",
    "evo-files>=0.2.4",
    "evo-compute>=0.0.2",
    "evo-objects>=0.4.0",
    "evo-sdk-common>=0.5.21",
    "evo-schemas>=2025.9.2",
    "evo-widgets>=0.2.0",
    "aiohttp>=3.14.0",
    "aiohttp>=3.14.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tomli; python_version < '3.11'",
    "pyjwt>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit>=4",
    "ruff==0.15.4",
    "reuse",
]
poc = [
    "jupyterlab>=4",
    "ipykernel>=6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.ruff.lint.per-file-ignores]
# Notebook cells are intentionally self-contained: each re-imports what it needs
# That triggers cross-cell redefinition warnings (F811) which are by design for a teaching notebook.
"**/*.ipynb" = ["F811"]

[tool.ruff.lint.isort]
known-first-party = ["evo_mcp"]
