[project]
name = "object-duplicates-demo"
version = "0.0.1"
description = "Detect duplicate Evo objects in a selected workspace"
requires-python = ">=3.10,<3.14"
dependencies = [
    "evo-sdk>=0.1.17",
    "evo-schemas>=2025.12.15",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "prettytable>=3.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "ruff>=0.14.2",
    "nbstripout>=0.8.2",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"
